--- a/js/templates/InputViewTemplate.html
+++ b/js/templates/InputViewTemplate.html
@@ -1,8 +1,25 @@
 <div id="video-input" class="navbar navbar-inverse">
-    <video class="img-thumbnail" id="video" width="160" height="100" autoplay></video>
-    <div class="ctrl-row">
-        <button id="start" class="vid-ctrl btn btn-primary btn-xs">Start</button>
-        <button id="stop" class="vid-ctrl btn btn-default btn-xs" disabled="disabled">Stop</button>
+    <video class="img-thumbnail" id="video" autoplay></video>
+    <div id="ctrls">
+        <form class="" role="">
+            <div class="form-group">
+                <label for="framesPerGif" class="">Frames Per Gif</label>
+                <input type="text" id="framesPerGif" value="<%= framesPerGif %>" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label for="frameInterval" class="">Capture Interval</label>
+                <input type="text" id="frameInterval" value="<%= frameInterval %>" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label for="delay" class="">Frame Delay</label>
+                <input type="text" id="delay" value="<%= delay %>" class="form-control" />
+            </div>
+            <div class="form-group btns">
+                <button id="start" class="vid-ctrl btn btn-primary">Start</button>
+                <button id="stop" class="vid-ctrl btn btn-default" disabled="disabled">Stop</button>
+            </div>
+        </form>
     </div>
+
 </div>
 <canvas style="display: none;" id="canvas" width="720" height="450"></canvas>
