--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
     margin-top : .5em;
 }
 
-#ctrls label {
+#video-input label {
     color: #f5f5f5;
     width: 8em;
 }
@@ -32,6 +32,10 @@
     text-align: center;
     margin-top: 1em;
     margin-bottom: 1em;
+}
+
+#mode {
+    float:right;
 }
 
 .gif-list > div {
