--- a/js/templates/progressTemplate.html
+++ b/js/templates/progressTemplate.html
@@ -1,5 +1,5 @@
 <div class="gif-item prog">
-    <h4><%= progress %>% Complete</h4>
+    <h4 class="progress-title">Creating Gif</h4>
     <div class="progress progress-striped active">
         <div class="progress-bar" role="progressbar" aria-valuenow="<%= progress %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= progress %>%;">
             <span class="sr-only"><%= progress %>% Complete</span>
