--- a/js/templates/capturingTemplate.html
+++ b/js/templates/capturingTemplate.html
@@ -1,6 +1,4 @@
-<div>
-    <h4>Capturing Frames</h4>
-</div>
-<div>
-    <h4>(Smile)</h4>
+<div class="capture-wrapper">
+	<p>Taking Pictures</p>
+    <img src="images/loader.gif" class="capture-gif" alt="">
 </div>
