Changed to object urls

--- a/js/templates/gifItemTemplate.html
+++ b/js/templates/gifItemTemplate.html
@@ -1,8 +1,8 @@
 <span class="glyphicon glyphicon-remove"></span>
-<a href="<%= dataURL %>" download="<%= id %>">
+<a href="<%= binaryURL %>" download="<%= id %>">
     <span class="glyphicon glyphicon-save"></span>
 </a>
-<img src="<%= dataURL %>" class="img-thumbnail gif-item">
+<img src="<%= binaryURL %>" class="img-thumbnail gif-item">
 <div>
     <input style="display:none" type="text" id="fileName" value="<%= fileName %>" />
     <span id="lblFileName"><%= fileName %></span>
